Fixed some margins and division spacing

--- a/src/assets/scss/object/component/c-/_-finance.scss
+++ b/src/assets/scss/object/component/c-/_-finance.scss
@@ -81,6 +81,10 @@
       &.top_page {
         line-height: 8.6rem;
         margin-left: 7.3rem;
+
+        @include mq('md') {
+          margin: 0;
+        }
       }
     }
   }
