--- a/src/assets/scss/object/project/p-/_-benefit.scss
+++ b/src/assets/scss/object/project/p-/_-benefit.scss
@@ -1,8 +1,9 @@
 .p- {
   &benefit {
     &-con {
-      margin: 7rem 0;
+      margin: 7rem 0 20rem;
     }
+
     max-width: 1090px;
     width: 100%;
     opacity: 1;
