--- a/src/assets/scss/object/project/p-/_-financial_diagnostic.scss
+++ b/src/assets/scss/object/project/p-/_-financial_diagnostic.scss
@@ -2,11 +2,10 @@
   &financial_diagnostic {
     background: transparent linear-gradient(0deg, rgba(181, 216, 105, 0.18) 0%, rgba(0, 182, 183, 0.18) 100%) 0% 0% no-repeat padding-box;
     padding: 7.3rem 7rem 5.7rem;
-    margin: 6rem 0 7.4rem;
+    margin: 6rem 0 10rem;
 
     @include mq('md') {
       padding: 5.6rem 1.5rem;
-      margin: 6rem 0 5.2rem;
     }
 
     &__head {
