--- a/src/assets/scss/object/project/p-/_-information.scss
+++ b/src/assets/scss/object/project/p-/_-information.scss
@@ -76,7 +76,7 @@
       color: #394829;
       width: 57rem;
       display: block;
-      margin: 7.3rem auto 0rem;
+      margin: 15rem auto 0rem;
       border-bottom: 1px solid;
       padding-bottom: 1.5rem;
       @extend .p-mincho;
@@ -85,7 +85,7 @@
         font-size: 1.6rem;
         letter-spacing: 1.6px;
         width: 100%;
-        margin: 0;
+        margin-top: 12rem;
       }
     }
 
